# posture-shrimp

./: .eslintrc.cjs  .gitignore  README.md  build_output.txt  index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  test_output.txt  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  debug.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: camera.rs  license.rs  mod.rs  notifications.rs  updates.rs
src-tauri/src/db/: models.rs  queries.rs
src/components/analytics/: Analytics.tsx
src/components/camera/: CameraView.tsx
src/components/dashboard/: Dashboard.tsx
src/components/settings/: Settings.tsx
src/components/ui/: Layout.tsx
src/hooks/: useGamification.ts  usePosture.ts
src/lib/: store.ts
src/lib/mediapipe/: posture-scorer.ts
src/lib/utils/: geometry.ts
src/styles/: animations.css  globals.css
tests/e2e/: workflow.spec.ts
tests/unit/: geometry.test.ts  posture-scorer.test.ts
