[package]
name = "posture-shrimp"
version = "1.0.3"
description = "A privacy-first desktop application that tracks user posture in real-time."
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
notify-rust = "4.11.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
